--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Guy Orlov
 logo: /assets/headshot_cricle.png
-#description:
+description: Apsiring Data 
 #show_downloads: true
 theme: jekyll-theme-minimal
