--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Guy Orlov
 logo: assets/headshot_circle.png
-description: Aspiring Data Analyst from England
+description: Aspiring Data Analyst from Birmingham, England
 #show_downloads: true
 theme: jekyll-theme-minimal
